# cpacs_tigl_gen

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: cmake.yml
input/: CustomTypes.txt  ParentPointer.txt
src/: CodeGen.cpp  CodeGen.h  Filesystem.cpp  Filesystem.h  IndentingStreamWrapper.h  SchemaParser.cpp  SchemaParser.h  Tables.cpp  Tables.h  TixiDocument.h  TixiHelper.cpp  TixiHelper.h  TypeSystem.cpp  TypeSystem.h  UniquePtr.h  Variant.hpp  WriteIfDifferentFiles.cpp  WriteIfDifferentFiles.h  main.cpp
src/driver/: main.cpp
src/lib/: CodeGen.cpp  Filesystem.cpp  Filesystem.h  SchemaParser.cpp  SchemaParser.h  Tables.cpp  TixiDocument.h  TypeSystem.cpp  TypeSystem.h  Variant.hpp
src/lib/runtime/: TixiHelper.h
test/: main.cpp  paths.h.in  utils.cpp  utils.h
test/data/all/: ref.cpp  schema.xsd
test/data/basetypewithparent/: ParentPointer.txt  ref.cpp  result.cpp  schema.xsd
test/data/cdata/: ref.cpp  schema.xsd
test/data/choice/: ref.cpp  schema.xsd
test/data/collapsedifferentenums/: ref.cpp  schema.xsd
test/data/complextypewithsimplecontent/: TypeSubstitution.txt  ref.cpp  schema.xsd
test/data/custombasetype/: CustomTypes.txt  ref.cpp  schema.xsd
test/data/documentation/: ref.cpp  schema.xsd
test/data/optionalchoice/: ref.cpp  schema.xsd
test/data/sequence/: ref.cpp  schema.xsd
test/data/simplebasetypewithparent/: ref.cpp  schema.xsd
test/data/uidinbasetype/: ref.cpp  schema.xsd
test/data/uidreferencevector/: TypeSubstitution.txt  ref.cpp  schema.xsd
